[package]
name = "AXCWG_API"
version = "0.2.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
serde = { version = "1.0", features = ["derive"] }
rusqlite = { version = "0.32.1", features = ["bundled"] }
reqwest = "0.12.8"
chrono = {version="0.4.38", features = ["clock"]}
actix-cors = "0.7.0"

